--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@types/react-datepicker": "^6.2.0",
     "@types/yup": "^0.29.14",
     "axios": "^1.7.7",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.27.0",
+    "saas": "^1.0.0",
     "sass": "^1.80.5",
     "yup": "^1.4.0"
   },
