--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.27.0",
+    "react-tooltip": "^5.28.0",
     "saas": "^1.0.0",
     "sass": "^1.80.5",
     "yup": "^1.4.0"
@@ -29,6 +30,7 @@
     "@types/axios": "^0.9.36",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-tooltip": "^3.11.0",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
