--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-datepicker": "^6.2.0",
     "@types/yup": "^0.29.14",
     "axios": "^1.7.7",
+    "framer-motion": "^11.13.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
