--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.27.0",
+    "react-toastify": "^11.0.0",
     "react-tooltip": "^5.28.0",
     "saas": "^1.0.0",
     "sass": "^1.82.0",
